Closed Bug 1798178 Opened 3 years ago Closed 3 years ago

Downloading a txt file from b.m.o does not trigger the "completed download" animation, and the file is not added to the Downloads list

Categories

(Core :: DOM: Networking, defect)

defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- unaffected
firefox107 --- unaffected
firefox108 --- verified

People

(Reporter: mayankleoboy1, Assigned: sefeng211)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [orb:m1])

Attachments

(1 file)

Create fresh Nightly profile
Go to https://bugzilla.mozilla.org/show_bug.cgi?id=1728590
Right click on the attached Testcase->Save Link As->Save

ER: A "download is completed" animation should be triggered, and a download panel/button should appear in the Toolbar that would allow me to open the downloaded file.
AR: No animation is triggered

Regression:
Bug 1785331 - Allow Synthesized Request Bypass ORB checks r=smaug,valentin,necko-reviewers

If ORB doesn't block the request from service worker, then the
synthesized request should also not be blocked by ORB.

Differential Revision: https://phabricator.services.mozilla.com/D160382

Regressed by: 1785331
Summary: Downloading a txt file from b.m.o does not trigger the "completed download" animation → Downloading a txt file from b.m.o does not trigger the "completed download" animation, and the file is not added to the Downloads list

Set release status flags based on info from the regressing bug 1785331

:sefeng, since you are the author of the regressor, bug 1785331, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

I want to add that this also affects downloading raw files from GitHub. The files are actually silently downloaded, but they are 0 bytes files which clutter the Downloads folder. Also, if you open the link, right-click and use "Save Page As...", the files can be successfully downloaded.

There's no point of blocking requests that users want to download,
and these requests are only being handled the parent process.

Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fb256b849de8 Allow ORB ignores save link downloads r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Flags: needinfo?(sefeng)
Whiteboard: [orb:m1]

Reproduced the issue on Nightly 108.0a1 build from 2022-10-29 on MacOS 12 ARM, Windows 10, WIndows 11 and Ubuntu 22.
Verified it on Beta 108.0b2 build on MacOS 12 ARM, Windows 10, WIndows 11 and Ubuntu 22, and can confirm that the issue is fixed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: