Bug 1798178 - Allow ORB ignores save link downloads r=necko-reviewers,valentin

There's no point of blocking requests that users want to download,
and these requests are only being handled the parent process.

Differential Revision: https://phabricator.services.mozilla.com/D160845